# hover-raft

moos-code/: CMakeLists.txt  mission.moos
moos-code/src/: CMakeLists.txt
moos-code/src/iLoadCell/: CMakeLists.txt  LoadCell.cpp  LoadCell.h  LoadCell_Info.cpp  LoadCell_Info.h  iLoadCell.moos  main.cpp
moos-code/src/iRaftRoboteq/: RaftRoboteq.cpp
moos-code/src/iXbox360Controller/: CMakeLists.txt
moos-code/src/pRaftControl/: RaftControl.cpp
raft/Matlab/: Arduino_Mapping.m  Arduino_test.m  Arm_BodePlot_v3Spd.m  Arm_BodePlot_v4Spd.m  Arm_BodePlot_v5Spd.m  Arm_BodePlot_v6.m  Bad_spd_derived.fig  Good_spd_given.fig  Pot.fig  Shoulder Bode v2.fig  Shoulder Bode v3.fig  Shoulder Bode v4.fig  Shoulder Bode v5_WIN.fig  Shoulder Bode vFail.fig  Shoulder_Bode_v2.mat  Shoulder_Bode_v3.mat  Shoulder_Bode_v4.mat  Shoulder_Bode_v5WIN.mat  Shoulder_Bode_v6POT.mat  Shoulder_Bode_vFail.mat  Speed_Output_Compare.fig  lower_vals_cut_reason1.fig  lower_vals_cut_reason2.fig  mexsine.m
